# ReportGenerator

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.pycharm.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  conftest.py  entrypoint.production.sh  entrypoint.sh  entrypoint.test.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
backend/common/: decorators.py  validators.py
backend/config/: admin.py  celery.py  routers.py  settings.py  urls.py
backend/crm/: tasks.py
backend/crm/converters/: __init__.py  base_converter.py  material_converter.py  request_stats_converter.py
backend/crm/loaders/: base_loader.py  material_loader.py  request_stats_loader.py
backend/crm/management/commands/: start_import.py
backend/crm/mock_data/: testing_data.xlsx
backend/crm/services/: __init__.py  excel_client.py
backend/materials/: constants.py  models.py
backend/materials/migrations/: 0001_initial.py
backend/request/: filters.py  models.py  paginators.py  querysets.py  serializers.py  views.py
backend/request/migrations/: 0001_initial.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
flower/: Dockerfile
nginx/: Dockerfile  domain-redirect.conf.esh  exporters.conf  nginx.conf.esh  ssl_params
promtail/: Dockerfile  promtail.yml
